pkgs/dartcv_core/src/imgproc.h

// Blurs an image using a Gaussian filter.
// void cv::GaussianBlur (InputArray src, OutputArray dst, Size ksize, double sigmaX, double sigmaY=0, int borderType=BORDER_DEFAULT, AlgorithmHint hint=cv::ALGO_HINT_DEFAULT)
CvStatus *GaussianBlur(Mat src, Mat dst, Size ps, double sX, double sY, int bt);
// TODO
// Returns filter coefficients for computing spatial image derivatives.
// void cv::getDerivKernels (OutputArray kx, OutputArray ky, int dx, int dy, int ksize, bool normalize=false, int ktype=CV_32F)

// TODO
// Returns Gabor filter coefficients.
// Mat cv::getGaborKernel (Size ksize, double sigma, double theta, double lambd, double gamma, double psi=CV_PI *0.5, int ktype=CV_64F)

// Returns Gaussian filter coefficients.
// Mat cv::getGaussianKernel (int ksize, double sigma, int ktype=CV_64F)
CvStatus *GetGaussianKernel(int ksize, double sigma, int ktype, Mat *rval);
// TODO
// Blurs an image using the stackBlur.
// void cv::stackBlur (InputArray src, OutputArray dst, Size ksize)

// SECTION - Geometric Image Transformations

// TODO
// Converts image transformation maps from one representation to another.
// void cv::convertMaps (InputArray map1, InputArray map2, OutputArray dstmap1, OutputArray dstmap2, int dstmap1type, bool nninterpolation=false)

// Calculates an affine transform from three pairs of the corresponding points.
// Mat cv::getAffineTransform (const Point2f src[], const Point2f dst[])
// Mat cv::getAffineTransform (InputArray src, InputArray dst)
CvStatus *GetAffineTransform(VecPoint src, VecPoint dst, Mat *rval);
CvStatus *GetAffineTransform2f(VecPoint2f src, VecPoint2f dst, Mat *rval);
// Calculates a perspective transform from four pairs of the corresponding points.
// Mat cv::getPerspectiveTransform (const Point2f src[], const Point2f dst[], int solveMethod=DECOMP_LU)
// Mat cv::getPerspectiveTransform (InputArray src, InputArray dst, int solveMethod=DECOMP_LU)
CvStatus *GetPerspectiveTransform(VecPoint src, VecPoint dst, Mat *rval, int solveMethod);
CvStatus *GetPerspectiveTransform2f(VecPoint2f src, VecPoint2f dst, Mat *rval, int solveMethod);
// Retrieves a pixel rectangle from an image with sub-pixel accuracy.
// void cv::getRectSubPix (InputArray image, Size patchSize, Point2f center, OutputArray patch, int patchType=-1)
CvStatus *GetRectSubPix(Mat src, Size patchSize, Point2f center, Mat dst);
// Calculates an affine matrix of 2D rotation.
// Mat cv::getRotationMatrix2D (Point2f center, double angle, double scale)
CvStatus *GetRotationMatrix2D(Point2f center, double angle, double scale, Mat *rval);
// Fills a connected component with the given color.
// int cv::floodFill (InputOutputArray image, InputOutputArray mask, Point seedPoint, Scalar newVal, Rect *rect=0, Scalar loDiff=Scalar(), Scalar upDiff=Scalar(), int flags=4)
// int cv::floodFill (InputOutputArray image, Point seedPoint, Scalar newVal, Rect *rect=0, Scalar loDiff=Scalar(), Scalar upDiff=Scalar(), int flags=4)
CvStatus * FloodFill(Mat src, Mat mask, Point seedPoint, Scalar newVal, Rect *rect, Scalar loDiff, Scalar upDiff, int flags, int *rval);
// Fits an ellipse around a set of 2D points.
// RotatedRect cv::fitEllipseAMS (InputArray points)

// Fits an ellipse around a set of 2D points.
// RotatedRect cv::fitEllipseDirect (InputArray points)

// Fits a line to a 2D or 3D point set.
// void cv::fitLine (InputArray points, OutputArray line, int distType, double param, double reps, double aeps)
CvStatus *FitLine(VecPoint pts, Mat line, int distType, double param, double reps, double aeps);