packages/dartcv/lib/src/g/imgproc.g.dart


  late final _FitLinePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, Mat, ffi.Int, ffi.Double,
              ffi.Double, ffi.Double)>>('FitLine');
  late final _FitLine = _FitLinePtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint, Mat, int, double, double, double)>();

  ffi.Pointer<CvStatus> FitLine_Async(
    VecPoint pts,
    int distType,
    double param,
    double reps,
    double aeps,
    imp1.CvCallback_1 callback,
  ) {
    return _FitLine_Async(
      pts,
      distType,
      param,
      reps,
      aeps,
      callback,
    );
  }

  late final _FitLine_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, ffi.Int, ffi.Double,
              ffi.Double, ffi.Double, imp1.CvCallback_1)>>('FitLine_Async');
  late final _FitLine_Async = _FitLine_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint, int, double, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FloodFill(
    Mat src,
    Mat mask,
    CvPoint seedPoint,
    Scalar newVal,
    ffi.Pointer<CvRect> rect,
    Scalar loDiff,
    Scalar upDiff,
    int flags,
    ffi.Pointer<ffi.Int> rval,
  ) {
    return _FloodFill(
      src,
      mask,
      seedPoint,
      newVal,
      rect,
      loDiff,
      upDiff,
      flags,
      rval,
    );
  }

  late final _FloodFillPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat,
              Mat,
              CvPoint,
              Scalar,
              ffi.Pointer<CvRect>,
              Scalar,
              Scalar,
              ffi.Int,
              ffi.Pointer<ffi.Int>)>>('FloodFill');
  late final _FloodFill = _FloodFillPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, CvPoint, Scalar,
          ffi.Pointer<CvRect>, Scalar, Scalar, int, ffi.Pointer<ffi.Int>)>();

  ffi.Pointer<CvStatus> FloodFill_Async(
    Mat src,
    Mat mask,
    CvPoint seedPoint,
    Scalar newVal,
    Scalar loDiff,
    Scalar upDiff,
    int flags,
    imp1.CvCallback_2 callback,
  ) {
    return _FloodFill_Async(
      src,
      mask,
      seedPoint,
      newVal,
      loDiff,
      upDiff,
      flags,
      callback,
    );
  }

  late final _FloodFill_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, CvPoint, Scalar, Scalar,
              Scalar, ffi.Int, imp1.CvCallback_2)>>('FloodFill_Async');
  late final _FloodFill_Async = _FloodFill_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, Mat, CvPoint, Scalar, Scalar, Scalar, int, imp1.CvCallback_2)>();

  ffi.Pointer<CvStatus> GaussianBlur(
    Mat src,
    Mat dst,
    CvSize ps,
    double sX,
    double sY,
    int bt,
  ) {
    return _GaussianBlur(
      src,
      dst,
      ps,
      sX,
      sY,
      bt,
    );
  }

  late final _GaussianBlurPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, CvSize, ffi.Double,
              ffi.Double, ffi.Int)>>('GaussianBlur');
  late final _GaussianBlur = _GaussianBlurPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, CvSize, double, double, int)>();

  ffi.Pointer<CvStatus> GaussianBlur_Async(
    Mat src,
    CvSize ps,
    double sX,
    double sY,
    int bt,
    imp1.CvCallback_1 callback,
  ) {
    return _GaussianBlur_Async(
      src,
      ps,
      sX,
      sY,
      bt,
      callback,
    );
  }

  late final _GaussianBlur_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvSize, ffi.Double, ffi.Double,
              ffi.Int, imp1.CvCallback_1)>>('GaussianBlur_Async');
  late final _GaussianBlur_Async = _GaussianBlur_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvSize, double, double, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GetAffineTransform(
    VecPoint src,
    VecPoint dst,
    ffi.Pointer<Mat> rval,
  ) {
    return _GetAffineTransform(
      src,
      dst,
      rval,
    );
  }

  late final _GetAffineTransformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, VecPoint, ffi.Pointer<Mat>)>>('GetAffineTransform');
  late final _GetAffineTransform = _GetAffineTransformPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VecPoint, VecPoint, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> GetAffineTransform2f(
    VecPoint2f src,
    VecPoint2f dst,
    ffi.Pointer<Mat> rval,
  ) {
    return _GetAffineTransform2f(
      src,
      dst,
      rval,
    );
  }

  late final _GetAffineTransform2fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint2f, VecPoint2f,
              ffi.Pointer<Mat>)>>('GetAffineTransform2f');
  late final _GetAffineTransform2f = _GetAffineTransform2fPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint2f, VecPoint2f, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> GetAffineTransform2f_Async(
    VecPoint2f src,
    VecPoint2f dst,
    imp1.CvCallback_1 callback,
  ) {
    return _GetAffineTransform2f_Async(
      src,
      dst,
      callback,
    );
  }

  late final _GetAffineTransform2f_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint2f, VecPoint2f,
              imp1.CvCallback_1)>>('GetAffineTransform2f_Async');
  late final _GetAffineTransform2f_Async =
      _GetAffineTransform2f_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint2f, VecPoint2f, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GetAffineTransform_Async(
    VecPoint src,
    VecPoint dst,
    imp1.CvCallback_1 callback,
  ) {
    return _GetAffineTransform_Async(
      src,
      dst,
      callback,
    );
  }

  late final _GetAffineTransform_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, VecPoint,
              imp1.CvCallback_1)>>('GetAffineTransform_Async');
  late final _GetAffineTransform_Async =
      _GetAffineTransform_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, VecPoint, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GetGaussianKernel(
    int ksize,
    double sigma,
    int ktype,
    ffi.Pointer<Mat> rval,
  ) {
    return _GetGaussianKernel(
      ksize,
      sigma,
      ktype,
      rval,
    );
  }

  late final _GetGaussianKernelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Double, ffi.Int,
              ffi.Pointer<Mat>)>>('GetGaussianKernel');
  late final _GetGaussianKernel = _GetGaussianKernelPtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, double, int, ffi.Pointer<Mat>)>();

  ffi.Pointer<CvStatus> GetGaussianKernel_Async(
    int ksize,
    double sigma,
    int ktype,
    imp1.CvCallback_1 callback,
  ) {
    return _GetGaussianKernel_Async(
      ksize,
      sigma,
      ktype,
      callback,
    );
  }

  late final _GetGaussianKernel_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Int, ffi.Double, ffi.Int,
              imp1.CvCallback_1)>>('GetGaussianKernel_Async');
  late final _GetGaussianKernel_Async = _GetGaussianKernel_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(int, double, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GetPerspectiveTransform(
    VecPoint src,
    VecPoint dst,
    ffi.Pointer<Mat> rval,
    int solveMethod,
  ) {
    return _GetPerspectiveTransform(
      src,
      dst,
      rval,
      solveMethod,
    );
  }

  late final _GetPerspectiveTransformPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, VecPoint, ffi.Pointer<Mat>,
              ffi.Int)>>('GetPerspectiveTransform');
  late final _GetPerspectiveTransform = _GetPerspectiveTransformPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VecPoint, VecPoint, ffi.Pointer<Mat>, int)>();

  ffi.Pointer<CvStatus> GetPerspectiveTransform2f(
    VecPoint2f src,
    VecPoint2f dst,
    ffi.Pointer<Mat> rval,
    int solveMethod,
  ) {
    return _GetPerspectiveTransform2f(
      src,
      dst,
      rval,
      solveMethod,
    );
  }

  late final _GetPerspectiveTransform2fPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint2f, VecPoint2f,
              ffi.Pointer<Mat>, ffi.Int)>>('GetPerspectiveTransform2f');
  late final _GetPerspectiveTransform2f =
      _GetPerspectiveTransform2fPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint2f, VecPoint2f, ffi.Pointer<Mat>, int)>();

  ffi.Pointer<CvStatus> GetPerspectiveTransform2f_Async(
    VecPoint2f src,
    VecPoint2f dst,
    int solveMethod,
    imp1.CvCallback_1 callback,
  ) {
    return _GetPerspectiveTransform2f_Async(
      src,
      dst,
      solveMethod,
      callback,
    );
  }

  late final _GetPerspectiveTransform2f_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint2f, VecPoint2f, ffi.Int,
              imp1.CvCallback_1)>>('GetPerspectiveTransform2f_Async');
  late final _GetPerspectiveTransform2f_Async =
      _GetPerspectiveTransform2f_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint2f, VecPoint2f, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GetPerspectiveTransform_Async(
    VecPoint src,
    VecPoint dst,
    int solveMethod,
    imp1.CvCallback_1 callback,
  ) {
    return _GetPerspectiveTransform_Async(
      src,
      dst,
      solveMethod,
      callback,
    );
  }

  late final _GetPerspectiveTransform_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecPoint, VecPoint, ffi.Int,
              imp1.CvCallback_1)>>('GetPerspectiveTransform_Async');
  late final _GetPerspectiveTransform_Async =
      _GetPerspectiveTransform_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecPoint, VecPoint, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GetRectSubPix(
    Mat src,
    CvSize patchSize,
    CvPoint2f center,
    Mat dst,
  ) {
    return _GetRectSubPix(
      src,
      patchSize,
      center,
      dst,
    );
  }

  late final _GetRectSubPixPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, CvSize, CvPoint2f, Mat)>>('GetRectSubPix');
  late final _GetRectSubPix = _GetRectSubPixPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, CvSize, CvPoint2f, Mat)>();

  ffi.Pointer<CvStatus> GetRectSubPix_Async(
    Mat src,
    CvSize patchSize,
    CvPoint2f center,
    imp1.CvCallback_1 callback,
  ) {
    return _GetRectSubPix_Async(
      src,
      patchSize,
      center,
      callback,
    );
  }

  late final _GetRectSubPix_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, CvSize, CvPoint2f,
              imp1.CvCallback_1)>>('GetRectSubPix_Async');
  late final _GetRectSubPix_Async = _GetRectSubPix_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          Mat, CvSize, CvPoint2f, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> GetRotationMatrix2D(
    CvPoint2f center,
    double angle,
    double scale,
    ffi.Pointer<Mat> rval,
  ) {
    return _GetRotationMatrix2D(
      center,
      angle,
      scale,
      rval,
    );
  }

  late final _GetRotationMatrix2DPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(CvPoint2f, ffi.Double, ffi.Double,
              ffi.Pointer<Mat>)>>('GetRotationMatrix2D');
  late final _GetRotationMatrix2D = _GetRotationMatrix2DPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          CvPoint2f, double, double, ffi.Pointer<Mat>)>();
